# chilbolton-temperature-rh-utils

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  metadata.json  metadata_f5.json  metadata_stfc.json  proc_year.sh  proc_year_stfc.sh  pyproject.toml
chilbolton_temperature_rh_utils/: __init__.py  count_purge_flags.py  flag_low_temperature.py  flag_purge_times.py  make_quicklooks.py  metadata.json  metadata_f5.json  metadata_stfc.json  proc_year.py  proc_year.sh  proc_year_f5.py  proc_year_f5.sh  proc_year_stfc.py  proc_year_stfc.sh  process_hmp155.py  process_hmp155_f5.py  process_hmp155_stfc.py  read_format5_content.py  split_cr1000x_data_daily.py
docs/: README.md  api.rst  conf.py  contributing.rst  index.rst  installation.rst  scripts.rst  usage.rst
